2006-07-10  Roger Leigh  <rleigh@debian.org>

	* debian/rules: Build in debian/build using VPATH.

	* debian/changelog: Add VPATH build.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* All Makefile.ams: include global.mk.

	* scripts/global.mk: New file.  Global Makefile options.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* Don't include <syslog.h> in sources not using syslog.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-main-base.cc (run_impl): Remove code duplicated
	in schroot_base::main::run (termios saving and restoring, and
	exception handling).

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.docs: Add the contents of debian/docs.

	* debian/docs: Remove.

	* debian/rules: The /usr/share/doc directories for dchroot and
	dchroot-dsa are symlinks to schroot.

	* debian/dchroot.preinst: New file.  Remove
	/usr/share/doc/dchroot.

	* debian/dchroot-dsa.preinst: New file.  Remove
	 /usr/share/doc/dchroot-dsa.

	* debian/changelog: Update.

2006-07-09  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document the new "directory" chroot type.

	* schroot/schroot.conf.5.in, schroot/schroot-setup.5.in: Document
	new "directory" chroot type.

	* schroot/setup/00check, schroot/setup/10mount,
	schroot/setup/00check: Add logic for "directory" CHROOT_TYPE.  The
	"directory" type will mount the chroot location with --rbind, like
	"plain", but will additionally mount filesystems like all other
	chroot types.

	* sbuild/Makefile.am: Add sbuild-chroot-directory.(cc|h).

	* sbuild/sbuild-chroot.cc (create): Add support for the
	"directory" chroot type.

	* sbuild/sbuild-chroot-plain.(cc|h): chroot_plain derives from
	chroot_directory.  It is exactly the same as directory except for
	the chroot name.

	* sbuild/sbuild-chroot-directory.(cc|h): New files.  The directory
	class is based upon the "plain" chroot type.

2006-07-09  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-dirstream.h: The dirstream extraction operator is