@@ -136,7 +136,7 @@ chroot_block_device::setup_lock (setup_type type,
 
   if (stat(this->device.c_str(), &statbuf) == -1)
     {
-      throw error(get_device(), DEVICE_STAT, errno);
+      throw error(get_device(), DEVICE_STAT, strerror(errno));
     }
   else if (!S_ISBLK(statbuf.st_mode))
     {
