@@ -1,3 +1,11 @@
+2006-07-12  Roger Leigh  <rleigh@debian.org>
+
+	* All sources use strerror(errno) in place of errno when creating
+	a custom_error<>.
+
+	* sbuild/sbuild-custom-error.h: Remove all constructors with
+	integer errno arguments.
+
 2006-07-10  Roger Leigh  <rleigh@debian.org>
 
 	* debian/rules: Build in debian/build using VPATH.
